--- a/Depo/Depo/App/Resources/ka.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ka.lproj/OurLocalizable.strings
@@ -2218,27 +2218,27 @@ then {11,99 TRY/Month}*/
 "scan_qr_code_info" = "დაასკანირე QR კოდი იმ მოწყობილობაზე, რომლის დაკავშირებაც გსურს";
 "qr_code_try_again" = "QR კოდის დასკანირება ვერ მოხერხდა. გთხოვთ, სცადო მოგვიანებით.";
 "print" = "";
-"photo_max_selection_title" = "";
-"photo_max_selection_body" = "";
+"photo_max_selection_title" = "თქვენ გაქვთ %d ფოტოს უფლება";
+"photo_max_selection_body" = "დასაბეჭდად შეგიძლიათ გაგზავნოთ მაქსიმუმ %d ფოტო.";
 "set_recovery_mail_success" = "აღდგენის ელ.ფოსტა შექმნილია";
 "set_recoverymail_securityquestion_success" = "აღდგენის ელ.ფოსტა და უსაფრთხოების შეკითხვა შექმნილია";
 "settings_set_password_apple_warning" = "პაროლის დასაყენებლად უნდა შეხვიდე lifebox-ში შენი Apple-ის ანგარიშით";
 "lifebox_resignup_warning" = "შენს მიერ შეყვანილი ინფორმაციით ანგარიში უკვე არსებობს. თუ გააგრძელებ, მობილური ნომერი სხვა ანგარიშიდან წაიშლება. შენს ანგარიშზე წვდომა გექნება მხოლოდ ელ.ფოსტითა  და პაროლით. დარწმუნებული ხარ, რომ გსურს გაგრძელება ? ";
 "best_scene_title" = "ფოტოების სერია";
 "best_scene_discover_card_body" = "აირჩიე საუკეთესო ფოტოების სერიიდან!";
-"print_discover_card_title" = "";
+"print_discover_card_title" = "ბეჭდვის პაკეტი";
 "print_discover_card_body" = "დაბეჭდე 5-მდე ფოტო ყოველთვიურად სპეციალური პაკეტით და მიიღეთ ისინი შენს მისამართზე უფასოდ.";
-"can_not_sent_otp_sms" = "";
-"invalid_refenrence_code" = "";
-"delete_for_selected" = "";
-"keep_everything" = "";
-"delete_info" = "";
+"can_not_sent_otp_sms" = "ვერიფიკაციის კოდისთვის SMS-ის გაგზავნა შეუძლებელია. შეგიძლიათ გააგრძელოთ თქვენი ანგარიშის კუთვნილი ელ. ფოსტით.";
+"invalid_refenrence_code" = "მითითების კოდი არასწორია.";
+"delete_for_selected" = "Მონიშნულის წაშლა";
+"keep_everything" = "Შეინახე ყველა";
+"delete_info" = "აირჩიეთ ფოტოები, რომელთა წაშლა გსურთ.";
 "best_scene_discover_card_title" = "ფოტოების სერია";
-"forgot_my_password_info" = "";
-"best_photo" = "";
-"security_question_invalid" = "";
-"select_security_question" = "";
-"draw_enddate" = "";
+"forgot_my_password_info" = "პაროლის გადატვირთვის პროცესის გასაგრძელებლად შეიყვანეთ თქვენი ანგარიშის ელ.ფოსტა ან ტელეფონის ნომერი.\nშეიყვანეთ დამადასტურებელი კოდი სურათზე.\nშემდეგ, პაროლის აღდგენის ბმული გაიგზავნება თქვენს ელ. ფოსტაზე ან კოდი გაიგზავნება თქვენს ტელეფონის ნომერზე SMS-ით.";
+"best_photo" = "შენი საუკეთესო ფოტო!";
+"security_question_invalid" = "თქვენ მიერ არჩეული უსაფრთხოების შეკითხვა ან პასუხი არასწორია.";
+"select_security_question" = "აირჩიეთ უსაფრთხოების შეკითხვა, რომელიც ადრე აირჩიეთ";
+"draw_enddate" = "გათამაშებაში მონაწილეობის ბოლო თარიღი:";
 "draw_detail_button" = "Raffle Details";
 "draw_join" = "Join the Raffle";
 "draw_warning_header" = "You Couldn't Participate in the Raffle";
@@ -2246,10 +2246,10 @@ then {11,99 TRY/Month}*/
 "draw_package_button" = "Go to Packages";
 "draw_already_join" = "You have entered the raffle";
 "draw_detail_header" = "Raffle Details";
-"draw_success" = "";
-"delete_popup_title" = "";
-"delete_popup_body" = "";
-"please_enter_your_msisdn" = "";
+"draw_success" = "თქვენი ლატარიის განაცხადი დასრულებულია. დეტალური ინფორმაცია შეგიძლიათ იხილოთ გათამაშების დეტალებში.";
+"delete_popup_title" = "არჩეული ფოტოები წაიშლება.";
+"delete_popup_body" = "Დარწმუნებული ხარ რომ წაშლა გინდა?";
+"please_enter_your_msisdn" = "თქვენი ტელეფონის ნომრის lifebox-ში დამატება ყველაზე საიმედო გზაა თქვენი ანგარიშის სიცოცხლის განმავლობაში დასაცავად. გთხოვთ, დაამატოთ თქვენი ტელეფონის ნომერი, რათა გააგრძელოთ თქვენს მოგონებებზე წვდომა lifebox-ში.";
 "grace_banner_paycell_text" = "";
 "photo_max_selection_title_x" = "";
 "photo_max_selection_body_x" = "";
