--- a/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
@@ -2265,7 +2265,7 @@ then {11,99 TRY/Month}*/
 "draw_success" = "Cererea dvs. pentru loterie a fost completată. Puteți găsi informații detaliate în detaliile tombolei.";
 "delete_popup_title" = "Fotografiile Selectate Vor Fi Șterse.";
 "delete_popup_body" = "Sunteți sigur că doriți să le ștergeți?";
-"please_enter_your_msisdn" = "Vă rugăm să introduceți numărul dvs. de telefon.";
+"please_enter_your_msisdn" = "Adăugarea numărului dvs. de telefon la lifebox este cea mai sigură modalitate de a vă proteja contul pe viață. Vă rugăm să vă adăugați numărul de telefon pentru a continua să vă accesați amintirile în lifebox.";
 "grace_banner_paycell_text" = "";
 "photo_max_selection_title_x" = "";
 "photo_max_selection_body_x" = "";
