--- a/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
@@ -2279,7 +2279,7 @@ then {11,99 TRY/Month}*/
 "draw_success" = "Ваша заявка на участие в лотерее успешно завершена. Подробную информацию вы найдете в описании лотереи.";
 "delete_popup_title" = "Выбранные Фотографии Будут Удалены.";
 "delete_popup_body" = "Вы уверены, что хотите удалить фотографии?";
-"please_enter_your_msisdn" = "Пожалуйста, введите свой номер телефона.";
+"please_enter_your_msisdn" = "Внесение своего номера телефона в lifebox - это самый надежный способ защитить свой аккаунт на всю жизнь. Пожалуйста, добавьте свой номер телефона, чтобы продолжить получать доступ к своим воспоминаниям в lifebox.";
 "grace_banner_paycell_text" = "";
 "photo_max_selection_title_x" = "";
 "photo_max_selection_body_x" = "";
