--- a/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
@@ -2267,7 +2267,7 @@ then {11,99 TRY/Month}*/
 "draw_success" = "Вашу заявку на участь у лотереї успішно завершено. Детальну інформацію ви знайдете в описі лотереї.";
 "delete_popup_title" = "Вибрані Фотографії Будуть Видалені.";
 "delete_popup_body" = "Ви впевнені, що хочете видалити фотографії?";
-"please_enter_your_msisdn" = "Будь ласка, введіть номер телефону.";
+"please_enter_your_msisdn" = "Додавання номера телефону до lifebox - це найнадійніший спосіб захистити свій обліковий запис на все життя. Будь ласка, додайте свій номер телефону, щоб продовжити отримувати доступ до своїх спогадів у lifebox.";
 "grace_banner_paycell_text" = "";
 "photo_max_selection_title_x" = "";
 "photo_max_selection_body_x" = "";
