--- a/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
@@ -2355,7 +2355,7 @@ then {11,99 TRY/Month}*/
 /*Fuzzy*/
 "delete_popup_title" = "Seçili Olan Fotoğrafların Silinecektir.";
 "delete_popup_body" = "Silmek istediğine emin misin?";
-"please_enter_your_msisdn" = "Lüfen telefon numaranızı girin.";
+"please_enter_your_msisdn" = "Telefon numaranı lifebox' a eklemek hesabını bir ömür koruyabilmek için en güvenilir yoldur. lifebox' taki anılarına ulaşmaya devam etmek için lütfen telefon numaranı ekle.";
 "grace_banner_paycell_text" = "";
 "photo_max_selection_title_x" = "";
 "photo_max_selection_body_x" = "";
