--- a/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
@@ -2271,3 +2271,5 @@ then {11,99 TRY/Month}*/
 "grace_banner_paycell_text" = "";
 "photo_max_selection_title_x" = "";
 "photo_max_selection_body_x" = "";
+"no_video_to_print_popup_title" = "";
+"no_video_to_print_popup_body" = "";
