--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -2339,3 +2339,15 @@ then {11,99 TRY/Month}*/
 "photo_max_selection_body_x" = "You can send a maximum of %@ photos for printing.";
 "no_video_to_print_popup_title" = "";
 "no_video_to_print_popup_body" = "";
+
+/*deeplink nereye olacak? ona göre metin güncelleyebilirim*/
+"\n\"peo" = "";
+
+/*deeplink nereye olacak? ona göre metin güncelleyebilirim*/
+"\n\"\n\"peo\"" = "";
+
+/*deeplink nereye olacak? ona göre metin güncelleyebilirim*/
+"\n\"\n\"\n\"peo\"\"" = "";
+
+/*deeplink nereye olacak? ona göre metin güncelleyebilirim*/
+"\n\"\n\"\n\"\n\"peo\"\"\"" = "";
