--- a/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
@@ -2361,3 +2361,15 @@ then {11,99 TRY/Month}*/
 "photo_max_selection_body_x" = "";
 "no_video_to_print_popup_title" = "Seçilen Videolar Baskıya Gönderilemez";
 "no_video_to_print_popup_body" = "Baskı işlemine devam edebilmek için sadece fotoğraflarını seçmelisin.";
+
+/*deeplink nereye olacak? ona göre metin güncelleyebilirim*/
+"\n\"peo" = "";
+
+/*deeplink nereye olacak? ona göre metin güncelleyebilirim*/
+"\n\"\n\"peo\"" = "";
+
+/*deeplink nereye olacak? ona göre metin güncelleyebilirim*/
+"\n\"\n\"\n\"peo\"\"" = "";
+
+/*deeplink nereye olacak? ona göre metin güncelleyebilirim*/
+"\n\"\n\"\n\"\n\"peo\"\"\"" = "";
