--- a/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
@@ -2359,5 +2359,44 @@ then {11,99 TRY/Month}*/
 "grace_banner_paycell_text" = "";
 "photo_max_selection_title_x" = "";
 "photo_max_selection_body_x" = "";
-"no_video_to_print_popup_title" = "Seçilen Videolar Baskıya Gönderilemez";
+"no_video_to_print_popup_title" = "Seçilen Videolar Baskıya Gönderilemez!";
 "no_video_to_print_popup_body" = "Baskı işlemine devam edebilmek için sadece fotoğraflarını seçmelisin.";
+
+/*Hediye çekiliş hakkı ekranı başlık*/
+"gamification_raffle_count" = "";
+
+/*Kampanya tarih aralıgı*/
+"gamification_raffle_dates" = "";
+
+/*Toplam çekiliş hak sayısı*/
+"gamification_raffle_count" = "";
+
+/*Çekiliş özetini gör buton*/
+"gamification_raffle_brief" = "";
+
+/*Çekiliş özet açıklaması*/
+"gamification_event_description" = "";
+
+/*Yarın tekrar gel metni*/
+"gamification_comeback" = "";
+
+/*Paket satın alma kuralı için*/
+"gamification_package_rule" = "";
+
+/*Toplam çekiliş hak sayısı*/
+"gamification_raffle_count" = "";
+
+/*Kampanya tarih aralıgı*/
+"gamification_raffle_dates" = "";
+
+/*Çekiliş özetini gör buton*/
+"gamification_raffle_brief" = "";
+
+/*Çekiliş özet açıklaması*/
+"gamification_event_description" = "";
+
+/*Yarın tekrar gel metni*/
+"gamification_comeback" = "";
+
+/*Paket satın alma kuralı için*/
+"gamification_package_rule" = "";
