--- a/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
@@ -2271,3 +2271,11 @@ then {11,99 TRY/Month}*/
 "photo_max_selection_body_x" = "";
 "no_video_to_print_popup_title" = "";
 "no_video_to_print_popup_body" = "";
+"gamification_raffle_count" = "";
+"gamification_raffle_dates" = "";
+"gamification_raffle_brief" = "";
+"gamification_event_description" = "";
+"gamification_comeback" = "";
+"gamification_package_rule" = "";
+"gamification_raffle_info" = "";
+"gamification_raffle_draw" = "";
