--- a/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
@@ -2298,3 +2298,4 @@ then {11,99 TRY/Month}*/
 "gamification_total_count" = "";
 "gamification_campaign_conditions" = "";
 "gamification_rules" = "";
+"gamification_campaign_policy_title" = "";
