--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -2366,3 +2366,4 @@ then {11,99 TRY/Month}*/
 "gamification_total_count" = "";
 "gamification_campaign_conditions" = "";
 "gamification_rules" = "";
+"gamification_campaign_policy_title" = "";
