--- a/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
@@ -2311,3 +2311,4 @@ then {11,99 TRY/Month}*/
 "gamification_campaign_conditions" = "";
 "gamification_rules" = "";
 "gamification_campaign_policy_title" = "";
+"gamification_raffle_win" = "";
