--- a/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
@@ -2313,3 +2313,4 @@ then {11,99 TRY/Month}*/
 "gamification_campaign_conditions" = "";
 "gamification_rules" = "";
 "gamification_campaign_policy_title" = "";
+"gamification_raffle_win" = "";
