LB-7183 gamification localizable, icon added and photoprint button fixed

--- a/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
@@ -2392,3 +2392,21 @@ then {11,99 TRY/Month}*/
 "gamification_rules" = "Çekiliş Hak Kazanımı";
 "gamification_campaign_policy_title" = "Yasal MPİ";
 "gamification_raffle_win" = "Çekiliş Hakkı Kazan";
+"gamification_title_upload" = "Fotoğraf Yükle";
+"gamification_title_act_faceimage" = "FaceImage";
+"gamification_buy" = "Paket Al";
+"gamification_photopick" = "Photopick Yap";
+"gamification_create_collage" = "Kolaj Yarat";
+"gamification_print" = "Baskı Al";
+"gamification_invite" = "Davet Et";
+"gamification_createstory" = "Hikaye Oluştur";
+"gamification_createalbum" = "Albüm Yarat";
+"gamification_act_faceimage" = "FaceImage";
+"gamification_upload" = "Fotoğraf Yükle";
+"gamification_title_buy" = "Paket";
+"gamification_title_photopick" = "Photopick";
+"gamification_title_create_collage" = "Kolaj";
+"gamification_title_print" = "Baskı";
+"gamification_title_invite" = "Davet";
+"gamification_title_createstory" = "Hikaye Oluştur";
+"gamification_title_createalbum" = "Albüm";
