--- a/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
@@ -2302,3 +2302,21 @@ then {11,99 TRY/Month}*/
 "gamification_rules" = "";
 "gamification_campaign_policy_title" = "";
 "gamification_raffle_win" = "";
+"gamification_title_upload" = "";
+"gamification_title_act_faceimage" = "";
+"gamification_buy" = "";
+"gamification_photopick" = "";
+"gamification_create_collage" = "";
+"gamification_print" = "";
+"gamification_invite" = "";
+"gamification_createstory" = "";
+"gamification_createalbum" = "";
+"gamification_act_faceimage" = "";
+"gamification_upload" = "";
+"gamification_title_buy" = "";
+"gamification_title_photopick" = "";
+"gamification_title_create_collage" = "";
+"gamification_title_print" = "";
+"gamification_title_invite" = "";
+"gamification_title_createstory" = "";
+"gamification_title_createalbum" = "";
