--- a/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
@@ -2307,7 +2307,7 @@ then {11,99 TRY/Month}*/
 "gamification_raffle_draw" = "";
 "gamification_raffle_summary" = "";
 "gamification_event_not_trigerred" = "";
-"gamification_event_trigger_count" = "";
+"gamification_event_trigger_count" = "You Have %d Raffle Rights";
 "gamification_event_completed" = "";
 "gamification_total_count" = "";
 "gamification_campaign_conditions" = "";
@@ -2334,3 +2334,4 @@ then {11,99 TRY/Month}*/
 "gamification_title_createalbum" = "";
 "timeline_header_backup" = "Лучшие воспоминания 2023 года";
 "winter_video_timeline_header" = "";
+"yearly" = "";
