--- a/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
@@ -2336,7 +2336,7 @@ then {11,99 TRY/Month}*/
 "gamification_raffle_draw" = "";
 "gamification_raffle_summary" = "";
 "gamification_event_not_trigerred" = "";
-"gamification_event_trigger_count" = "";
+"gamification_event_trigger_count" = "You Have %d Raffle Rights";
 "gamification_event_completed" = "";
 "gamification_total_count" = "";
 "gamification_campaign_conditions" = "";
@@ -2363,3 +2363,4 @@ then {11,99 TRY/Month}*/
 "gamification_title_createalbum" = "";
 "timeline_header_backup" = "Kujtimet Më të Mira Të Vitit 2023";
 "winter_video_timeline_header" = "";
+"yearly" = "";
